socklog-0.9.1
Wed, 26 Jun 2002 15:54:06 +0200
  * Makefile: enable target sysdeps.

socklog-0.9.0
Fri, 31 May 2002 14:07:11 +0200
  * new service socklog-klog doing kernel logging.
  * socklog.c: fix facility and priority decoding in ucspi mode.
  * socklog-conf.c: creates socklog-klog's service directories.
  * doc/configuration.html, doc/examples.html, man/socklog-conf.8: document
    socklog-klog service.

socklog-0.8.2
Sat, 18 May 2002 15:08:09 +0200
  * src/: include public domain sources to build byte.a, unix.a, time.a:
    socklog builds without having daemontools' sources installed.
  * doc/usedietlibc.html: how to use dietlibc.

socklog-0.8.1
Sun, 28 Apr 2002 10:32:28 +0200
  * tryto.c: change return value on child timeout to 100, add FATAL prefix
    to error message on child timeout/crash.

socklog-0.8.0
Tue, 16 Apr 2002 14:11:34 +0200
  * doc/network.html: fix quoting bug, network client sample was not
    working properly.
  * doc/benefits.html: add more descriptions of benefits.
  * no code changes at all.

socklog-0.7.0
Mon,  4 Feb 2002 11:37:13 +0100
  * install-man: symlinks now point into the correct directory:
    /package/admin/socklog/man/ (thx Mike Forster).
  * socklog.c: complete revision: dropped fdbuffer.o, switched to unix.a,
    byte.a support libraries (now in the Public domain).
  * socklog-conf.c: support log dir with cross device link; optional logdir
    option must start with /.
  * Makefile: sysdeps.
  * doc: revised.
  * (thx Gary Gendel, support for solaris)

socklog-0.6.1
Thu, 17 Jan 2002 11:43:36 +0100
  * bug: socklog.c: error in recvfrom() was not catched (thx Liviu Daia)

socklog-0.6.0
Sat, 12 Jan 2002 14:18:57 +0100
  * uncat: redirect prog's stdout to stderr; never writes to stdout
  * socklog-conf notify: redirects uncat's stdout to the pipe:
    'exec <> $PIPE', fixes wrong timeout handling seen in some
    configurations.
  * new: package/install-man for installing manpage links
  * doc: adapted