@@ -23,13 +23,13 @@ build-stamp:
 	#	$(MAKE)
 	#/usr/bin/docbook-to-man debian/socklog.sgml > socklog.1
 
-	tar xfzvp socklog-0.9.1.tar.gz
+	tar xfzvp socklog-0.10.0.tar.gz
 	( \
-	cd admin/socklog-0.9.1 ; \
+	cd admin/socklog-0.10.0 ; \
 	package/compile ; \
-	echo "/package/admin/socklog-0.9.1" > compile/home ; \
+	echo "/package/admin/socklog-0.10.0" > compile/home ; \
 	rm -f compile/src ; \
-	ln -s /package/admin/socklog-0.9.1/src compile/src ; \
+	ln -s /package/admin/socklog-0.10.0/src compile/src ; \
 	)
 	touch build-stamp
 
@@ -56,25 +56,25 @@ install: build
 
 	chmod 1755 debian/socklog/package
 	cp -a admin debian/socklog/package/
-	cp -a debian/socklog/package/admin/socklog-0.9.1/man .
-	rm -rf debian/socklog/package/admin/socklog-0.9.1/man
-	cp -a debian/socklog/package/admin/socklog-0.9.1/doc .
-	rm -rf debian/socklog/package/admin/socklog-0.9.1/doc
-	cp -a debian/socklog/package/admin/socklog-0.9.1/package .
+	cp -a debian/socklog/package/admin/socklog-0.10.0/man .
+	rm -rf debian/socklog/package/admin/socklog-0.10.0/man
+	cp -a debian/socklog/package/admin/socklog-0.10.0/doc .
+	rm -rf debian/socklog/package/admin/socklog-0.10.0/doc
+	cp -a debian/socklog/package/admin/socklog-0.10.0/package .
 
 	# cleanup
-	rm -rf debian/socklog/package/admin/socklog-0.9.1/compile
+	rm -rf debian/socklog/package/admin/socklog-0.10.0/compile
 
 	# create debian/links
 	rm -f debian/links
 	for i in \
-	 `cat debian/socklog/package/admin/socklog-0.9.1/package/commands` ; \
+	 `cat debian/socklog/package/admin/socklog-0.10.0/package/commands` ; \
 	do \
 	  echo "/package/admin/socklog/command/$$i /command/$$i" \
 		>> debian/links ; \
 	done
 	for i in \
-	 `cat debian/socklog/package/admin/socklog-0.9.1/package/commands` ; \
+	 `cat debian/socklog/package/admin/socklog-0.10.0/package/commands` ; \
 	do \
 	  echo "/command/$$i /usr/local/bin/$$i" \
 		>> debian/links ; \
