@@ -10,7 +10,8 @@
 <hr>
 <a href="install.html">How to install socklog</a><br>
 <a href="upgrade.html">Upgrading from previous versions of socklog</a><br>
-<a href="usedietlibc.html">How to use dietlibc</a>
+<a href="usedietlibc.html">How to use dietlibc</a><br>
+<a href="readme.solaris.html">Using on solaris</a>
 <p>
 <a href="benefits.html">Benefits</a><br>
 <a href="configuration.html">Configuration</a><br>
