@@ -16,20 +16,18 @@ Check that you have the recent version of
 <a href="http://cr.yp.to/daemontools.html">daemontools</a> installed.
 <p>
 Download
-<a href="socklog-0.9.1.tar.gz">socklog-0.9.1.tar.gz</a> into
+<a href="socklog-0.10.0.tar.gz">socklog-0.10.0.tar.gz</a> into
 <tt>/package</tt> and unpack the archive
 <pre>
   # cd /package
-  # gunzip socklog-0.9.1.tar
-  # tar -xpf socklog-0.9.1.tar
-  # rm socklog-0.9.1.tar
-  # cd admin/socklog-0.9.1
+  # gunzip socklog-0.10.0.tar
+  # tar -xpf socklog-0.10.0.tar
+  # rm socklog-0.10.0.tar
+  # cd admin/socklog-0.10.0
 </pre>
-On solaris set <tt>conf-cc</tt> and <tt>conf-ld</tt> as follows:
-<pre>
-  # echo 'gcc -O2 -Wall -DSOLARIS' > src/conf-cc
-  # echo 'gcc -s -lsocket -lnsl -ldoor -lthread' > src/conf-ld
-</pre>
+On solaris read <a href="readme.solaris.html">using socklog on solaris</a>
+before proceeding.
+<p>
 Compile and install the <i>socklog</i> programs
 <pre>
   # package/install
@@ -41,7 +39,7 @@ hierarchy, do:
 </pre>
 To report success:
 <pre>
-  # mail pape-socklog-0.9.1@smarden.org < compile/sysdeps
+  # mail pape-socklog-0.10.0@smarden.org < compile/sysdeps
 </pre>
 Refer to <a href="configuration.html">Configuration</a> for
 configuring and setting up <i>socklog</i> services.
