@@ -10,6 +10,18 @@
 <h1>socklog - upgrading from previous versions</h1>
 <hr>
 
+<h3>0.9.1 to 0.10.0</h3>
+Only the solaris support of <i>socklog</i> has changed. If you are not
+running solaris, no action from you is required.
+<p>
+On solaris you need to reconfigure your <i>socklog</i> service. Please
+read <a href="readme.solaris.html">using socklog on solaris</a>, adapt
+<tt>/service/socklog-unix/run</tt> script as described there, and restart
+the service:
+<pre>
+  # svc -t /service/socklog-unix
+</pre>
+<hr>
 <h3>0.8.1 or 0.8.2 to 0.9.1</h3>
 This version comes with the new socklog-klog service which provides kernel
 logging on Linux and BSD. You might want to start this service on BSD, or
