@@ -51,6 +51,12 @@ converts syslog facility and priority information to names
 as found in
 .I /usr/include/syslog.h
 at compile time if present.
+.LP
+On solaris
+.B socklog
+also accepts
+.I sun_stream
+as first argument. Please see the web page for details.
 .SH UNIX SOCKET
 .B socklog
 [
