@@ -7,9 +7,9 @@ test -d src || ( echo 'Wrong working directory.'; exit 1 )
 here=`env - PATH=$PATH pwd`
 parent=`dirname $here`
 
-echo 'Creating symlink socklog -> socklog-0.9.1...'
+echo 'Creating symlink socklog -> socklog-0.10.0...'
 rm -f socklog
-ln -s socklog-0.9.1 socklog
+ln -s socklog-0.10.0 socklog
 mv -f socklog ..
 
 echo 'Making command links in /command...'
